Closed
Bug 1629569
Opened 5 years ago
Closed 5 years ago
Warp: Support IONFLAGS=logs
Categories
(Core :: JavaScript Engine: JIT, defect, P2)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
mozilla77
Tracking | Status | |
---|---|---|
firefox77 | --- | fixed |
People
(Reporter: evilpies, Assigned: evilpies)
References
Details
Attachments
(1 file)
I like to use the spewer / iongraph for debugging sadly at the moment this causes an assertion failure:
Assertion failure: filteredOutCompilations != 0, at /home/tom/projects/central/js/src/jit/JitSpewer.cpp:303
Segmentation fault (core dumped)
Updated•5 years ago
|
Priority: -- → P2
Comment 1•5 years ago
|
||
The JSONSpewer needs some setup to make it available. This is due to the fact that the JSON spewer is being constructed in a LifoAlloc such that we can have multiple compilation running concurrently. This is also quite handy, as it enables us to use iongraph within gdb/rr as well.
https://searchfox.org/mozilla-central/source/js/src/jit/JitSpewer.cpp#324
https://searchfox.org/mozilla-central/source/js/src/jit/JitSpewer.cpp#227
Assignee | ||
Comment 2•5 years ago
|
||
Depends on D70872
Updated•5 years ago
|
Assignee: nobody → evilpies
Status: NEW → ASSIGNED
Assignee | ||
Comment 3•5 years ago
|
||
Thanks Nicolas!
Pushed by evilpies@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/8ed4f44ba77f
Warp: Support IONFLAGS=logs. r=jandem
Comment 5•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in
before you can comment on or make changes to this bug.
Description
•