Bug 1629569 - Warp: Support IONFLAGS=logs. r=jandem

Depends on D70872

Differential Revision: https://phabricator.services.mozilla.com/D71065